// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row with additional class names renders correctly 1`] = `
<div
  className="row className"
>
  content
</div>
`;

exports[`Row with content renders correctly 1`] = `
<div
  className="row "
>
  content
</div>
`;
